--- a/style.css
+++ b/style.css
@@ -171,6 +171,13 @@ img{
         margin: 0;
         padding: 0;
     }
+    
+    .navigation>li>a{
+    color: aliceblue;
+    font-size: 12px;
+    text-decoration: none;
+    text-transform: capitalize;
+}
 
     .main{
         text-align: center;
