--- a/style.css
+++ b/style.css
@@ -13,11 +13,12 @@
     
     /* justify-content: center;
     text-align: center; */
-    width: auto;
+    width: 1340px;
+    min-height: 100vh;
     height: auto;
     /* background-color: #fff4f4; */
     background-color: rgb(19, 17, 17);
-    padding: 0px;
+    /*padding: 10px;*/
 }
 
 /* ubah padding bagian wrapper dan judul */
@@ -63,7 +64,6 @@
 .navigation>li{
     list-style-type: none;
     padding: 16px;
-
 }
 
 .navigation>li>a{
@@ -126,10 +126,12 @@ img{
     padding-top: 10em;
     padding-bottom: 60vh;
     display: flex;
+    flex-wrap: wrap;
     color: white;
 }
 
 .card{
+    width: 20%;
     padding: 32px;
     margin: 8px;
 }
@@ -139,7 +141,7 @@ img{
 }
 
 #contact i{
-
+    
     color: white;
     padding-top: 13px;
 }
@@ -156,37 +158,274 @@ img{
     color: white;
 }
 
-@media only screen and (max-width: 600px) {
-    .wrapper{
+.center-body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.loader-triangle-3 polygon{
+    stroke: #ffeb3b;
+    stroke: #fff;
+    stroke-dasharray: 17;
+    animation: anm-tr-3-move 2.5s  cubic-bezier(0.35, 0.04, 0.63, 0.95) infinite;
+}
+
+@keyframes anm-tr-3-move{
+    to{
+        stroke-dashoffset: -136;
+    }
+}
+/*----------------------*/
+
+/*----------------------
+#cntr{
+    color: rgb(223, 66, 66);
+    font-size: 36px;
+    font-weight: bold;
+    padding-top: 200px;
+    position: fixed;
+    width: auto;
+    bottom: 45%;
+    display: block;
+}
+
+#flip{
+    height: 50px;
+    overflow: hidden;
+}
+
+#flip > div > div {
+    color: rgb(255, 248, 248);
+    padding: 4px 12px;
+    height: 45px;
+    margin-bottom: 45px;
+    display: inline-block;
+}
+
+#flip div:first-child{
+    animation: textflip 5s linear infinite;
+}
+
+#flip div:first-child{
+    background: #97e3ff;
+}
+
+#flip div:first-child{
+    animation: textflip 5s linear infinite;
+}
+
+@keyframes textflip {
+    0%{
+        margin-top: -270px;
+    }
+    5%{
+        margin-top: -180px;
+    }
+    33%{
+        margin-top: -180px;
+    }
+    
+    38%{
+        margin-top: -90px;
+    }
+    
+    66%{
+        margin-top: -90px;
+    }
+    
+    71%{
+        margin-top: 0px;
+    }
+    
+    99.99%{
+        margin-top: 0px;
+    }
+    
+    100%{
+        margin-top: -270px;
+    }    
+}
+
+p{
+    position: fixed;
+    width: 100%;
+    bottom: 30px;
+    font-size: 12px;
+    color: #999;
+    margin-top: 200px;
+}
+*/
+
+/* btn kelang keling
+.btn{
+    position: relative;
+    padding: 20px 50px;
+    text-decoration: none;
+    color: #FFE816;
+    font-size: 2em;
+    text-transform: uppercase;
+    font-family: Poppins;
+    letter-spacing: 4px;
+    overflow: hidden;
+    background: rgba(225, 225, 225, 1);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 2);
+}
+
+.btn::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(225, 225, 225, 1);
+}
+
+.btn::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg,transparent,rgba(225, 225, 225,.4),transparent);
+    transition: 0.5s;
+    transition-delay: 0.5s;
+}
+
+.btn:hover:after{
+    left: 100%;
+}
+
+.btn span{
+    position: absolute;
+    display: block;
+    transition: 0.5s ease; 
+}
+
+.btn span:nth-child(1)
+{
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background: #fff;
+}
+
+.btn:hover span:nth-child(1)
+{
+    width: 100%;
+    transform: translateX(100%);
+}
+
+.btn span:nth-child(3)
+{
+    bottom: 0;
+    right: 0;
+    width: 0;
+    height: 1px;
+    background: #fff;
+}
+
+.btn:hover span:nth-child(3)
+{
+    width: 100%;
+    transform: translateX(-100%);
+}
+
+.btn span:nth-child(2)
+{
+    top: 0;
+    left: 0;
+    width: 1px;
+    height: 0;
+    background: #fff;
+}
+
+.btn:hover span:nth-child(2)
+{
+    height: 100%;
+    transform: translateY(100%);
+}
+
+.btn span:nth-child(4)
+{
+    bottom: 0;
+    right: 0;
+    width: 1px;
+    height: 0;
+    background: #fff;
+}
+
+.btn:hover span:nth-child(4)
+{
+    height:100%;
+    transform: translateY(-100%);
+}
+*/
+
+
+@media only screen and (max-width: 476px) {
+    .container{
         width: 100%;
     }
-
-    .navbar{
-        display: flex;
-        position: -webkit-sticky;
-        height: 20%;
+    
+    .wrapper{
+        width: 100%;
+        /*padding-left: 35px;*/
     }
-
-    .navbar .navigation{
-        margin: 0;
-        padding: 0;
+    
+    .navbar{
+        /*position: fixed;*/
+        height: auto;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+    }
+    
+    .judul{
+        font-size: 1em;
+    }
+    
+    .navigation>li{
+        padding: 8px;
     }
     
     .navigation>li>a{
-    color: aliceblue;
-    font-size: 12px;
-    text-decoration: none;
-    text-transform: capitalize;
-}
-
+        font-size: 12px;
+    }
+    
+    .navbar .navigation{
+        margin: 0;
+    }
+    
     .main{
         text-align: center;
         align-items: center;
     }
 
-
-    #contact{
-        height: max-content;
-        color: aqua;
+    .title{
+        font-family: 'Fuzzy Bubbles', cursive;
     }
-  }
+
+    .card{
+        width: 40%;
+    }
+    
+    .title-card{
+        size: 12px;
+    }
+
+    .description{
+        font-family: 'Sniglet', cursive;
+        text-transform: capitalize;
+    }
+    
+    #contact{
+        height: max-content;    
+        flex-direction: column;
+        align-items: center;
+    }
+}
